Regression: Realize instance node crashes Blender #100562

Closed
opened 2022-08-22 14:15:55 +02:00 by Silas Opel · 14 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.59

Blender Version
Broken: version: 3.4.0, 3.3
Worked: (3.2)
Caused by b876ce2a4a

Short description of error
Shorter just to try it in the sample file. Its a dynamic paint setup that produces a vertex group. This group is used on a plane with a geonodes setup.

Exact steps for others to reproduce the error

  • Drag the realize Instance node between the end of the node setup
    #100562.blend
**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.59 **Blender Version** Broken: version: 3.4.0, 3.3 Worked: (3.2) Caused by b876ce2a4a **Short description of error** Shorter just to try it in the sample file. Its a dynamic paint setup that produces a vertex group. This group is used on a plane with a geonodes setup. **Exact steps for others to reproduce the error** - Drag the realize Instance node between the end of the node setup [#100562.blend](https://archive.blender.org/developer/F13412268/T100562.blend)
Author

Added subscriber: @DarkKnight

Added subscriber: @DarkKnight

Added subscriber: @mod_moder

Added subscriber: @mod_moder

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
  1. The problem is in the Join Geometry node.
  2. You can recreate just like this:
    image.png
    RelizeInstanceBug.blend
  3. No stack, looks like a null reference or something, most likely an attempt to make an attribute from a dynamo paint, but I'm not sure
1) The problem is in the `Join Geometry` node. 2) You can recreate just like this: ![image.png](https://archive.blender.org/developer/F13411187/image.png) [RelizeInstanceBug.blend](https://archive.blender.org/developer/F13411190/RelizeInstanceBug.blend) 3) No stack, looks like a null reference or something, most likely an attempt to make an attribute from a dynamo paint, but I'm not sure

image.png

And also, in earlier versions, the attribute was either ignored and did not cause a failure, or it was obviously not created correctly (this is a white gradient)

![image.png](https://archive.blender.org/developer/F13411241/image.png) And also, in earlier versions, the attribute was either ignored and did not cause a failure, or it was obviously not created correctly (this is a white gradient)

I found the reason. The vertex group and the color attribute are converted to attributes under the same name

I found the reason. The vertex group and the color attribute are converted to attributes under the same name
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

I can confirm the crash too. Raising the priority.

The vertex group and the color attribute are converted to attributes under the same name

This seems the reason behind crash. Renaming either of them doesn't cause the crash

I can confirm the crash too. Raising the priority. > The vertex group and the color attribute are converted to attributes under the same name This seems the reason behind crash. Renaming either of them doesn't cause the crash
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Introduced in b876ce2a4a
cc @JacquesLucke ^

Introduced in b876ce2a4a cc @JacquesLucke ^
Pratik Borhade changed title from Realize instance node crashes Blender to Regression: Realize instance node crashes Blender 2022-08-23 05:47:05 +02:00

Full way to recreate:
Geometry canvas dynamic painting
Create a group of vertices, name simular as painting output attribute
Geometry nodes: A node to `Join Geometry``. Add any other geometry
Crash when a node tries to create a slice from an empty span

Full way to recreate: Geometry canvas dynamic painting Create a group of vertices, name simular as painting output attribute Geometry nodes: A node to `Join Geometry``. Add any other geometry Crash when a node tries to create a slice from an empty [span ](https://developer.blender.org/diffusion/B/browse/master/source/blender/geometry/intern/realize_instances.cc$301)

This issue was referenced by 5d67b52441

This issue was referenced by 5d67b524412d0dab936170eef65c508930ba4c30
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2022-08-23 10:57:40 +02:00
Author

Thats nice. Thanks.

Thats nice. Thanks.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100562
No description provided.