Fix T100562: Realize Instances node crashes when there is an attribute name collision